Update .gitignore and Dockerfile for inference

--- a/inference/Dockerfile
+++ b/inference/Dockerfile
@@ -5,9 +5,9 @@ WORKDIR /app
 
 # Copy the current directory contents into the container at /app
 COPY . /app
-
+COPY ./venv/lib/python3.12/site-packages /usr/local/lib/python3.12/site-packages
 # Install any needed packages specified in requirements.txt
-RUN pip install --no-cache-dir -r requirement.txt
+RUN pip --default-timeout=1000 install --no-cache-dir -r requirement.txt --no-deps
 
 # Make port 5000 available to the world outside this container
 EXPOSE 5000
